test_suite/tests/ui/conflict/alias-enum.stderr
error: expected expression, found `@`
  --> tests/ui/conflict/alias-enum.rs:74:5
   |
74 |     @//fail
   |     ^ expected expression

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:13:9
   |
8  |         #[serde(alias = "a", alias = "b", alias = "c")]
   |                                      --- matches all the relevant values
...
13 |         b: (),
   |         ^ no value can reach this
   |
   = note: `#[warn(unreachable_patterns)]` on by default

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:12:25
   |
8  |         #[serde(alias = "a", alias = "b", alias = "c")]
   |                                                   --- matches all the relevant values
...
12 |         #[serde(alias = "c")]
   |                         ^^^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:24:26
   |
20 |         #[serde(alias = "b", alias = "c")]
   |                                      --- matches all the relevant values
...
24 |         #[serde(rename = "c")]
   |                          ^^^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:35:9
   |
30 |         #[serde(alias = "B", alias = "c")]
   |                         --- matches all the relevant values
...
35 |         b: (),
   |         ^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:46:5
   |
41 |     #[serde(alias = "a", alias = "b", alias = "c")]
   |                                  --- matches all the relevant values
...
46 |     b,
   |     ^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:45:21
   |
41 |     #[serde(alias = "a", alias = "b", alias = "c")]
   |                                               --- matches all the relevant values
...
45 |     #[serde(alias = "c")]
   |                     ^^^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:58:22
   |
54 |     #[serde(alias = "b", alias = "c")]
   |                                  --- matches all the relevant values
...
58 |     #[serde(rename = "c")]
   |                      ^^^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:70:5
   |
65 |     #[serde(alias = "B", alias = "c")]
   |                     --- matches all the relevant values
...
70 |     b,
   |     ^ no value can reach this
